--- a/index.html
+++ b/index.html
@@ -3,29 +3,39 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <meta charset="utf-8">
         <title>A Level Pure 1 Revision</title>
     </head>
     <body>
         <div class="topnav">
-            <a class="active" href="#home">Home</a>
-            <a href="#news">Quadratics</a>
-            <a href="#contact">Coordinate Geometry</a>
-            <a href="#news">Series and Sequences</a>
-            <a href="#news">Binomial Expansion</a>
-            <a href="#news">Functions</a>
-            <a href="#about">Differentiation</a>
-            <a href="#news">Integration</a>
-            <a href="#news">Circular Measure</a>
-            <a href="#news">Trigonometry</a>
+            <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+            <a class="active" href="index.html">Home</a>
+            <a href="quadratics.html">Quadratics</a>
+            <a href="coordinategeometry.html">Coordinate Geometry</a>
+            <a href="seriessequences.html">Series and Sequences</a>
+            <a href="binomialexpansion.html">Binomial Expansion</a>
+            <a href="functions.html">Functions</a>
+            <a href="differentiation.html">Differentiation</a>
+            <a href="integration.html">Integration</a>
+            <a href="circularmeasure.html">Circular Measure</a>
+            <a href="trigonometry.html">Trigonometry</a>
+        </nav>
         </div>
-        <h1>Pure 1 Revision</h1>
-        <br>
-        <img src="Quadratics 1.PNG">
-        <br>
-        <div class="button-div">
-            <button type="button">Previous</button>
-            <button type="button">Next</button>
+        <h1 id="quadratics">Pure Mathematics 1 Exam Questions</h1>
+        </div>
+        <div class="list">
+            <ul>
+                <li><a href="quadratics.html">Quadratics</a></li>
+                <li><a href="coordinategeometry.html">Coordinate Geometry</a></li>
+                <li><a href="seriessequences.html">Series and Sequences</a></li>
+                <li><a href="binomialexpansion.html">Binomial Expansion</a></li>
+                <li><a href="functions.html">Functions</li>
+                <li><a href="differentiation.html">Differentiation</a></li>
+                <li><a href="integration.html">Integration</a></li>
+                <li><a href="circularmeasure.html">Circular Measure</a></li>
+                <li><a href="trigonometry.html">Trigonometry</a></li>
+            </ul>
         </div>
     </body>
 </html>
